# advent-of-code

./: .gitignore  AdventOfCode.sln  Cargo.toml  README.md
2021/: Cargo.toml  README.md
2021/src/: main.rs
2021/src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  mod.rs
2022/: Cargo.toml  README.md
2022/src/: main.rs
2022/src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  mod.rs
2023/: Cargo.toml  README.md
2023/src/: main.rs
2023/src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  mod.rs
Test/: Test.csproj
Test/AoC2024/: Day01Test.cs  Day02Test.cs  Day03Test.cs  Day04Test.cs  Day05Test.cs  Day1Test.cs
src/: Directory.Build.props  collections.rs  direction.rs  lib.rs  math.rs  matrix.rs  point.rs
src/2024/: 2024.csproj  Program.cs
src/AoC2024/: AoC2024.csproj  Program.cs  README.md
src/AoC2024/Solution/: Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Day1.cs
src/Base/: Base.csproj  Calendar.cs  ISolution.cs  Matrix.cs
src/Base/Point/: Point2D.cs  Point3D.cs
src/Core/: Calendar.cs  Core.csproj  ISolution.cs  Matrix.cs
src/Core/Point/: Point2D.cs  Point3D.cs
