[package]
name = "aoc-2023"
version = "0.1.0"
authors = ["Traxx186"]
edition = "2021"
rust-version = "1.73"
readme = "README.md"
repository = "https://github.com/Traxx186/advent-of-code"

[[bin]]
name = "aoc_2023"
path = "src/main.rs"

[dependencies]
aoc_common = { version = "0.1.0", path = ".."}
itertools = "0.12.0"
regex = "1.10.2"